tests/neg/syntax_unexpected_statement_recovery.baa
// EXPECT: وحدة أو جملة غير متوقعة
// EXPECT: ابدأ الجملة بتعريف
// EXPECT-DIAG-COUNT: 1
صحيح الرئيسية() {
    +.
    إرجع 0.
}
